--- a/src/Makefile
+++ b/src/Makefile
@@ -1568,15 +1568,15 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ACLOCAL = ${SHELL} /home/qbase/Qbase/build-aux/missing aclocal-1.15
+ACLOCAL = ${SHELL} /home/mr/qbase/build-aux/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
 AR = /usr/bin/ar
 ARFLAGS = cr
-AUTOCONF = ${SHELL} /home/qbase/Qbase/build-aux/missing autoconf
-AUTOHEADER = ${SHELL} /home/qbase/Qbase/build-aux/missing autoheader
-AUTOMAKE = ${SHELL} /home/qbase/Qbase/build-aux/missing automake-1.15
-AWK = gawk
+AUTOCONF = ${SHELL} /home/mr/qbase/build-aux/missing autoconf
+AUTOHEADER = ${SHELL} /home/mr/qbase/build-aux/missing autoheader
+AUTOMAKE = ${SHELL} /home/mr/qbase/build-aux/missing automake-1.15
+AWK = mawk
 BDB_CFLAGS = 
 BDB_CPPFLAGS = 
 BDB_LIBS = -ldb_cxx-4.8
@@ -1598,11 +1598,11 @@ CC = gcc
 CCACHE = 
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CLIENT_VERSION_BUILD = 1
+CLIENT_VERSION_BUILD = 0
 CLIENT_VERSION_IS_RELEASE = true
-CLIENT_VERSION_MAJOR = 1
+CLIENT_VERSION_MAJOR = 2
 CLIENT_VERSION_MINOR = 0
-CLIENT_VERSION_REVISION = 2
+CLIENT_VERSION_REVISION = 0
 COPYRIGHT_HOLDERS = The %s developers
 COPYRIGHT_HOLDERS_FINAL = The Qbase Core developers
 COPYRIGHT_HOLDERS_SUBSTITUTION = Qbase Core
@@ -1672,7 +1672,7 @@ LTLIBOBJS =
 LT_SYS_LIBRARY_PATH = 
 LUPDATE = /usr/lib/x86_64-linux-gnu/qt5/bin/lupdate
 MAINT = 
-MAKEINFO = ${SHELL} /home/qbase/Qbase/build-aux/missing makeinfo
+MAKEINFO = ${SHELL} /home/mr/qbase/build-aux/missing makeinfo
 MAKENSIS = 
 MANIFEST_TOOL = :
 MINIUPNPC_CPPFLAGS = 
@@ -1693,10 +1693,10 @@ OTOOL64 =
 PACKAGE = qbasecore
 PACKAGE_BUGREPORT = https://github.com/NicholasAdmin/Qbase/issues
 PACKAGE_NAME = Qbase Core
-PACKAGE_STRING = Qbase Core 1.0.2
+PACKAGE_STRING = Qbase Core 2.0.0
 PACKAGE_TARNAME = qbasecore
 PACKAGE_URL = 
-PACKAGE_VERSION = 1.0.2
+PACKAGE_VERSION = 2.0.0
 PATH_SEPARATOR = :
 PIC_FLAGS = -fPIC
 PIE_FLAGS = -fPIE
@@ -1755,7 +1755,7 @@ UNIVALUE_CFLAGS = -I$(srcdir)/univalue/include
 UNIVALUE_LIBS = univalue/libunivalue.la
 USE_QRCODE = 
 USE_UPNP = 
-VERSION = 1.0.2
+VERSION = 2.0.0
 WINDOWS_BITS = 
 WINDRES = 
 X11XCB_CFLAGS = 
@@ -1763,10 +1763,10 @@ X11XCB_LIBS =
 XGETTEXT = /usr/bin/xgettext
 ZMQ_CFLAGS = 
 ZMQ_LIBS = -lzmq
-abs_builddir = /home/qbase/Qbase/src
-abs_srcdir = /home/qbase/Qbase/src
-abs_top_builddir = /home/qbase/Qbase
-abs_top_srcdir = /home/qbase/Qbase
+abs_builddir = /home/mr/qbase/src
+abs_srcdir = /home/mr/qbase/src
+abs_top_builddir = /home/mr/qbase
+abs_top_srcdir = /home/mr/qbase
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -1798,7 +1798,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/qbase/Qbase/build-aux/install-sh
+install_sh = ${SHELL} /home/mr/qbase/build-aux/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
